config/sprayproxy.yaml
# Copyright © 2023 The Spray Proxy Contributors
# SPDX-License-Identifier: Apache-2.0

apiVersion: apps/v1
kind: Deployment
metadata:
  name: sprayproxy
  namespace: redhat-sprayproxy
  labels:
    app.kubernetes.io/name: sprayproxy
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: sprayproxy
  template:
    metadata:
      labels:
        app.kubernetes.io/name: sprayproxy
    spec:
      serviceAccountName: redhat-sprayproxy
      containers:
        - name: sprayproxy
          image: ko://github.com/redhat-appstudio/sprayproxy
          args:
            - server
          ports:
            - containerPort: 8080
              name: server
            - containerPort: 6000
              name: metrics
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: sprayproxy-service
  namespace: redhat-sprayproxy
spec:
  selector:
    app.kubernetes.io/name: sprayproxy
  ports:
    - name: server
      protocol: TCP
      port: 8080
    - name: metric
      protocol: TCP
      port: 6000
